--- a/app/src/main/res/layout/list_song_item.xml
+++ b/app/src/main/res/layout/list_song_item.xml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="10dp"
+    android:layout_marginBottom="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="6dp">
 
     <RelativeLayout
+        android:id="@+id/relative"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
