--- a/app/src/main/res/layout/activity_song_player.xml
+++ b/app/src/main/res/layout/activity_song_player.xml
@@ -47,7 +47,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="400dp"
         android:id="@+id/card"
         android:layout_below="@+id/layout_top_btn">
 
@@ -76,11 +76,11 @@
         android:ellipsize="end"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginTop="25dp"/>
+        android:layout_marginTop="40dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/artist_name"
+        android:text="@string/singer_name"
         android:id="@+id/artist_name"
         android:layout_below="@+id/song_name"
         android:textColor="@color/white"
@@ -166,7 +166,7 @@
             android:textSize="15dp"
             android:id="@+id/durationTotal"
             android:textColor="@color/white"
-            android:layout_marginStart="10dp"
+            android:layout_marginRight="10dp"
             android:layout_alignParentEnd="true"/>
         <SeekBar
             android:layout_width="match_parent"
