--- a/app/src/main/res/layout/library_item.xml
+++ b/app/src/main/res/layout/library_item.xml
@@ -15,51 +15,36 @@
         android:padding="8dp">
 
         <ImageView
-            android:id="@+id/img_list_song"
+            android:id="@+id/img_library_song"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentStart="true"
             android:scaleType="centerCrop" />
 
         <TextView
-            android:id="@+id/tv_song_name"
+            android:id="@+id/library_song_name"
             android:layout_width="255dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="39dp"
-            android:layout_toStartOf="@+id/btn_download"
-            android:layout_toEndOf="@+id/img_list_song"
+            android:layout_toEndOf="@+id/img_library_song"
             android:text="Song Name"
             android:textColor="@android:color/black"
             android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_singer_name"
+            android:id="@+id/library_singer_name"
             android:layout_width="255dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_song_name"
+            android:layout_below="@+id/library_song_name"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="39dp"
-            android:layout_toStartOf="@+id/btn_download"
-            android:layout_toEndOf="@+id/img_list_song"
+            android:layout_toEndOf="@+id/img_library_song"
             android:text="Singer Name"
             android:textColor="@android:color/black"
             android:textSize="12sp" />
-
-        <ImageView
-            android:id="@+id/btn_download"
-            android:layout_width="36dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/baseline_file_download" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
