--- a/app/src/main/res/layout/activity_song_player.xml
+++ b/app/src/main/res/layout/activity_song_player.xml
@@ -56,13 +56,29 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:id="@+id/cover_art" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:id="@+id/imageViewGredient"
             android:src="@drawable/gradient_foreground"
             android:layout_alignParentBottom="true"/>
+
+
+        <ImageView
+            android:id="@+id/btn_download"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/baseline_file_download_white" />
     </RelativeLayout>
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -98,7 +114,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-
         android:background="@drawable/gradient_foreground">
 
         <ImageView
@@ -143,6 +158,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="32dp"/>
+
     </RelativeLayout>
 
     <RelativeLayout
