--- a/app/src/main/res/layout/activity_song_player.xml
+++ b/app/src/main/res/layout/activity_song_player.xml
@@ -52,10 +52,11 @@
         android:layout_below="@+id/layout_top_btn">
 
         <ImageView
+            android:id="@+id/cover_art"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:id="@+id/cover_art" />
+            android:scaleType="centerCrop" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="250dp"
