--- a/app/src/main/res/layout/custom_notification.xml
+++ b/app/src/main/res/layout/custom_notification.xml
@@ -29,6 +29,7 @@
             android:layout_width="209dp"
             android:layout_height="wrap_content"
             android:text="@string/song_name"
+            android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
@@ -37,6 +38,7 @@
             android:layout_width="208dp"
             android:layout_height="wrap_content"
             android:text="@string/singer_name"
+            android:textColor="@color/white"
             android:textSize="14sp"></TextView>
     </LinearLayout>
 
